--- a/index.html
+++ b/index.html
@@ -14,18 +14,21 @@
     <link rel="stylesheet" href="animate.css">
     <link rel="stylesheet" href="simple-lightbox.css">
     <link rel="stylesheet" href="css/all.min.css">
+
+   
 </head>
 
 <body>
 
+    <div data-cursor="colorClass" data-cursor="-exclusion" data-cursor-stick="element"></div>
 
-    <header class="main ">
+    <section class="main scrollable">
 
 
         <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
             <div class="d-flex justify-content-center">
                 <div class="text-center">
-                    <h1 class="mx-auto my-0  title text-uppercase" data-in-effect="bounceIn">CREATIVE</h1>
+                    <h1 class="mx-auto my-0  title text-uppercase" data-in-effect="bounceIn" data-cursor="-exclusion">CREATIVE</h1>
                     <h1 class="mx-auto my-0  title text-uppercase " data-in-effect="bounceInUp">DESIGNER</h1>
                     <h2 class=" mx-auto mt-2 mb-5 subtitle" data-in-effect="fadeIn">FREDDIE LIN</h2>
                     <a class="btn mouse mx-auto " href="#about"><img src="mouse.svg" alt=""></a>
@@ -37,9 +40,9 @@
 
         <div class="headleftside"></div>
         <div class="headrightside"></div>
-    </header>
+    </section>
 
-    <section class="port-section text-center  ">
+    <section class="port-section text-center scrollable  ">
         <div class="bunnylogo">
             <img src="bunny_icon.png" class="img-fluid" alt="">
         </div>
@@ -69,7 +72,7 @@
     </section>
 
 
-    <section class="fast-section text-white">
+    <section class="fast-section text-white scrollable">
         <div class="container px-4 px-lg-5">
 
             <div class="row gx-4 gx-lg-5 justify-content-start ">
@@ -96,7 +99,7 @@
         </div>
 
     </section>
-    <section class="project-section bg-light" id="projects">
+    <section class="project-section bg-light scrollable" id="projects">
         <div class="container  px-lg-5">
             <!-- Featured Project Row-->
             <h1 class="text-center m-5">PASSIONATE ON WHAT I DID</h1>
@@ -155,7 +158,7 @@
     </section>
 
     <!-- Contact-->
-    <section class="contact-section bg-black">
+    <section class="contact-section bg-black ">
 
         <div class="container px-4 px-lg-5">
 
@@ -186,7 +189,7 @@
     </section>
 
 
-    
+
     <a href="mailto:freddielin.work@gmail.com" class="float1">
         <i class="fa fa-envelope my-float"></i>
     </a>
@@ -198,9 +201,9 @@
         <div class="container px-4 px-lg-5">Copyright &copy; Freddie Lin 2021</div>
     </footer>
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
+    
+    <script src="js/jquery.min.js" type="text/javascript"></script>
+    <script  type="module" src="js/index.js" ></script>
     <script src="jquery.textillate.js"></script>
     <script src="jquery.fittext.js"></script>
     <script src="jquery.lettering.js"></script>
@@ -208,10 +211,18 @@
     <script src="simple-lightbox.legacy.js"></script>
     <script src="simple-lightbox.jquery.js"></script>
     <script src="jquery.pagepiling.min.js"></script>
-    <script src="jquery.scrollify.js"></script>
-    <script src="anim.js"></script>
+
+    <!-- <script src="jquery.scrollify.js"></script> -->
+    <script src="anim.js" ></script>
+    <script src="scrollmagic/minified/ScrollMagic.min.js"></script>
+    <!-- 
+    <script src="scrollmagic/minified/plugins/debug.addIndicators.min.js"></script>
+    <script src="scrollmagic/minified/plugins/animation.gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TimelineLite.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenLite.min.js"></script> -->
     <script src="js/all.min.js"></script>
-    <script src="particles.js"></script>
+    <!-- <script src="particles.js"></script> -->
+
 </body>
 
 </html>
