--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                         <h2 class=" text-center text-black-50">IIID DESIGNS</h2>
                     </a>
                     <a href="img/1.png" class="big col-lg-3 " rel="rel1">
-                        <img class="img-fluid  " src="img/pain.png" alt="..." />
+                        <img class="img-fluid  " src="img/pain.jpg" alt="..." />
 
                         <h2 class=" text-center text-black-50">VISUALS DESIGNS</h2>
                     </a>
