--- a/index.html
+++ b/index.html
@@ -36,205 +36,203 @@
         <img src="img/wap.jpg" alt="" width="400px" class=" position-relative img-fluid">
     </div>
 
-    <div id="fullpage">
-        <section class="main section ">
+
+    <section class="main section ">
 
 
-            <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
-                <div class="d-flex justify-content-center ">
-                    <div class="text-center">
-                        <h1 class="mx-auto my-0  title text-uppercase" data-in-effect="bounceIn"
-                            data-cursor="-exclusion">
-                            CREATIVE</h1>
-                        <h1 class="mx-auto my-0  title text-uppercase " data-in-effect="bounceInUp">DESIGNER</h1>
-                        <h2 class=" mx-auto mt-2 mb-5 subtitle" data-in-effect="fadeIn">FREDDIE LIN</h2>
-                        <a class="btn mouse mx-auto "><img src="mouse.svg" alt=""></a>
-                    </div>
-                </div>
-
-
-            </div>
-
-            <div class="headleftside"></div>
-            <div class="headrightside"></div>
-        </section>
-
-        <section class="port-section text-center section  ">
-            <div class="bunnylogo">
-                <img src="bunny_icon.png" class="img-fluid" alt="">
-            </div>
-            <div class="portrightwhite">
-
-                <div class="container px-4 px-lg-5">
-
-                    <div class="row gx-4 gx-lg-5 justify-content-center ">
-                        <h1 class="bunnyH">
-                            Bunny Phyoe Dreamworld 2020
-                            <span>Myanmar First Augmented Reality Concert</span>
-                        </h1>
-                        <div class="col-lg-6 bunnyTitle">
-                            <span>In Myanmar, there was the first evolution of music concert including AR Technology. <a
-                                    href="https://en.wikipedia.org/wiki/Bunny_Phyoe" target="_blank">Bunny Phyoe</a>,
-                                Burmese singer,
-                                is best known as for his Pop Music, celebrated his concert, Dreamworld 2020 at Yangon
-                                Gallery in February 14,2020.</span>
-                            <a class="btn bunnybtn  mx-auto"
-                                href="https://medium.com/hex-creative/first-augmented-reality-concert-in-myanmar-41b89403510c"
-                                target="_blank">VIEW SHOWCASE</a>
-
-                        </div>
-
-
-                    </div>
-
-                </div>
-            </div>
-
-        </section>
-
-
-        <section class="sparkar-section text-white section">
-            <div class="content-right">
-
-                <div class="col-lg-6 ">
-                    <div class="mockup">
-                        <div class="iphone-wrap">
-                            <img class="iphone" src="img/phone.png" draggable="false">
-                        </div>
-                        <div class="video-wrap">
-                            <video class="mcvideo" muted autoplay loop playsinline>
-                                <source
-                                    src="https://cdn.discordapp.com/attachments/910121579227254826/910122056681668648/Spark_AR_Hub.mp4"
-                                    type="video/mp4">
-                            </video>
-                        </div>
-                    </div>
-
-                    <div class="row p-3 justify-content-around btnARgp ">
-
-                        <div class="d-flex">
-                            <a href="https://medium.com/hex-creative/the-renowned-facial-tattoo-traditional-culture-of-chin-ethnic-minority-women-is-on-the-verge-of-a3b17359a6d3"
-                                class="btn arBtn  mx-2" target="_blank"> View More</a>
-                            <a href="https://www.facebook.com/fbcameraeffects/tryit/339616654378197/" target="_blank"
-                                class="btn arBtn  mx-2">Try On Facebook</a>
-                        </div>
-
-                    </div>
-                </div>
-
-            </div>
-            <div class="ar-text px-4 px-lg-5 text-center">
-
-                <div class="row gx-4 gx-lg-5 justify-content-start ">
-                    <span class="col-lg-6 float-lg-left">
-                        <h1 class="chinTitle">
-                            Chin Traditional Tattoo AR
-                        </h1>
-                        <h4>
-
-                            The renowned Facial Tattoo traditional Culture of Chin Ethnic Minority Women is on the verge
-                            of
-                            Extinction
-                        </h4>
-
-                        <span>
-                            These AR tattoos and earrings are based on the tattoos and accessories of Chin Ethnic
-                            Minority
-                            Women of three Chin tribes.
-                            Let’s experience the Chin Inked Facial Tattoo with AR Effect, one of the lovely culture and
-                            beauty of these people...<a target="_blank"
-                                href="https://medium.com/hex-creative/the-renowned-facial-tattoo-traditional-culture-of-chin-ethnic-minority-women-is-on-the-verge-of-a3b17359a6d3">Read
-                                More</a>
-                        </span>
-                    </span>
-
-
-
-
-
+        <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
+            <div class="d-flex justify-content-center ">
+                <div class="text-center">
+                    <h1 class="  title text-uppercase">CREATIVE</h1>
+                    <h1 class= " title text-uppercase">DESIGNER</h1>
+                    <h2 class=" mx-auto mt-2 mb-5 subtitle">FREDDIE LIN</h2>
+                    <a class="btn mouse mx-auto "><img src="mouse.svg" alt=""></a>
                 </div>
             </div>
 
 
-        </section>
+        </div>
 
-        <section class="fast-section text-white section">
+        <div class="headleftside"></div>
+        <div class="headrightside"></div>
+    </section>
+
+    <section class="port-section text-center section  ">
+        <div class="bunnylogo">
+            <img src="bunny_icon.png" class="img-fluid" alt="">
+        </div>
+        <div class="portrightwhite">
+
             <div class="container px-4 px-lg-5">
 
-                <div class="row gx-4 gx-lg-5 justify-content-start ">
+                <div class="row gx-4 gx-lg-5 justify-content-center ">
+                    <h1 class="bunnyH">
+                        Bunny Phyoe Dreamworld 2020
+                        <span>Myanmar First Augmented Reality Concert</span>
+                    </h1>
+                    <div class="col-lg-6 bunnyTitle">
+                        <span>In Myanmar, there was the first evolution of music concert including AR Technology. <a
+                                href="https://en.wikipedia.org/wiki/Bunny_Phyoe" target="_blank">Bunny Phyoe</a>,
+                            Burmese singer,
+                            is best known as for his Pop Music, celebrated his concert, Dreamworld 2020 at Yangon
+                            Gallery in February 14,2020.</span>
+                        <a class="btn bunnybtn  mx-auto"
+                            href="https://medium.com/hex-creative/first-augmented-reality-concert-in-myanmar-41b89403510c"
+                            target="_blank">VIEW SHOWCASE</a>
 
-                    <h1 class="fastH">
-                        THINK DIFFERENT
-                    </h1><br>
-                    <h1 class="fastH">
-                        REMOTE WORK
-                    </h1><br>
-                    <h1 class="fastH ">
-                        FAST DELIVERY
-                    </h1><br>
+                    </div>
 
-                    <h1 class="fastH">
-                        QUALITY PRIORITY
-                    </h1><br>
-                </div>
-            </div>
-
-        </section>
-
-        <section class="project-section  section" id="projects">
-            <div class="container px-lg5">
-                <h1 class="text-center m-5">PASSIONATE ON WHAT I WORK</h1>
-                <div class="row gx-0 mb-2 mb-lg-0 justify-content-center">
-                    <a href="img/bg1.png" class="big col-lg-3 " rel="rel1">
-                        <img class="img-fluid  " src="img/bg1.png" alt="..." />
-
-                        <h2 class=" text-center text-black-50">BRANDING</h2>
-                    </a>
-                    <a href="img/1.png" class="big col-lg-3 " rel="rel1">
-                        <img class="img-fluid  " src="img/ill.jpg" alt="..." />
-
-                        <h2 class=" text-center text-black-50">ILLUSTRATIONS</h2>
-                    </a>
-                    <a href="img/1.png" class="big col-lg-3 " rel="rel1">
-                        <img class="img-fluid  " src="img/babybox.jpg" alt="..." />
-
-                        <h2 class=" text-center text-black-50">PACKAGING</h2>
-                    </a>
-                    <a href="img/1.png" class="big col-lg-3 " rel="rel1">
-                        <img class="img-fluid  " src="img/social.jpg" alt="..." />
-
-                        <h2 class=" text-center text-black-50">SOCIAL MEDIA</h2>
-                    </a>
-                    <a href="img/1.png" class="big col-lg-3 " rel="rel1">
-                        <img class="img-fluid  " src="img/motion graphics.png" alt="..." />
-
-                        <h2 class=" text-center text-black-50">MOTION GRAPHICS</h2>
-                    </a>
-                    <a href="img/1.png" class="big col-lg-3 " rel="rel1">
-                        <img class="img-fluid  " src="img/character.jpg" alt="..." />
-
-                        <h2 class=" text-center text-black-50">CHARACTER DESIGNS</h2>
-                    </a>
-                    <a href="img/1.png" class="big col-lg-3 " rel="rel1">
-                        <img class="img-fluid  " src="img/3DDesign.jpg" alt="..." />
-
-                        <h2 class=" text-center text-black-50">IIID DESIGNS</h2>
-                    </a>
-                    <a href="img/1.png" class="big col-lg-3 " rel="rel1">
-                        <img class="img-fluid  " src="img/pain.jpg" alt="..." />
-
-                        <h2 class=" text-center text-black-50">VISUALS DESIGNS</h2>
-                    </a>
-
-                    <a href="javascript:void(0)" class="btn downloadBtn">SEE MORE</a>
 
                 </div>
 
+            </div>
+        </div>
+
+    </section>
+
+
+    <section class="sparkar-section text-white section">
+        <div class="content-right">
+
+            <div class="col-lg-6 ">
+                <div class="mockup">
+                    <div class="iphone-wrap">
+                        <img class="iphone" src="img/phone.png" draggable="false">
+                    </div>
+                    <div class="video-wrap">
+                        <video class="mcvideo" muted autoplay loop playsinline>
+                            <source
+                                src="https://cdn.discordapp.com/attachments/910121579227254826/910122056681668648/Spark_AR_Hub.mp4"
+                                type="video/mp4">
+                        </video>
+                    </div>
+                </div>
+
+                <div class="row p-3 justify-content-around btnARgp ">
+
+                    <div class="d-flex">
+                        <a href="https://medium.com/hex-creative/the-renowned-facial-tattoo-traditional-culture-of-chin-ethnic-minority-women-is-on-the-verge-of-a3b17359a6d3"
+                            class="btn arBtn  mx-2" target="_blank"> View More</a>
+                        <a href="https://www.facebook.com/fbcameraeffects/tryit/339616654378197/" target="_blank"
+                            class="btn arBtn  mx-2">Try On Facebook</a>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+        <div class="ar-text px-4 px-lg-5 text-center">
+
+            <div class="row gx-4 gx-lg-5 justify-content-start ">
+                <span class="col-lg-6 float-lg-left">
+                    <h1 class="chinTitle">
+                        Chin Traditional Tattoo AR
+                    </h1>
+                    <h4>
+
+                        The renowned Facial Tattoo traditional Culture of Chin Ethnic Minority Women is on the verge
+                        of
+                        Extinction
+                    </h4>
+
+                    <span>
+                        These AR tattoos and earrings are based on the tattoos and accessories of Chin Ethnic
+                        Minority
+                        Women of three Chin tribes.
+                        Let’s experience the Chin Inked Facial Tattoo with AR Effect, one of the lovely culture and
+                        beauty of these people...<a target="_blank"
+                            href="https://medium.com/hex-creative/the-renowned-facial-tattoo-traditional-culture-of-chin-ethnic-minority-women-is-on-the-verge-of-a3b17359a6d3">Read
+                            More</a>
+                    </span>
+                </span>
+
+
+
+
 
             </div>
-        </section>
+        </div>
 
-        <!-- <section class="project-section bg-light section" id="projects">
+
+    </section>
+
+    <section class="fast-section text-white section">
+        <div class="container px-4 px-lg-5">
+
+            <div class="row gx-4 gx-lg-5 justify-content-start ">
+
+                <h1 class="fastH">
+                    THINK DIFFERENT
+                </h1><br>
+                <h1 class="fastH">
+                    REMOTE WORK
+                </h1><br>
+                <h1 class="fastH ">
+                    FAST DELIVERY
+                </h1><br>
+
+                <h1 class="fastH">
+                    QUALITY PRIORITY
+                </h1><br>
+            </div>
+        </div>
+
+    </section>
+
+    <section class="project-section  section" id="projects">
+        <div class="container px-lg5">
+            <h1 class="text-center m-5">PASSIONATE ON WHAT I WORK</h1>
+            <div class="row gx-0 mb-2 mb-lg-0 justify-content-center">
+                <a href="img/bg1.png" class="big col-lg-3 " rel="rel1">
+                    <img class="img-fluid  " src="img/bg1.png" alt="..." />
+
+                    <h2 class=" text-center text-black-50">BRANDING</h2>
+                </a>
+                <a href="img/1.png" class="big col-lg-3 " rel="rel1">
+                    <img class="img-fluid  " src="img/ill.jpg" alt="..." />
+
+                    <h2 class=" text-center text-black-50">ILLUSTRATIONS</h2>
+                </a>
+                <a href="img/1.png" class="big col-lg-3 " rel="rel1">
+                    <img class="img-fluid  " src="img/babybox.jpg" alt="..." />
+
+                    <h2 class=" text-center text-black-50">PACKAGING</h2>
+                </a>
+                <a href="img/1.png" class="big col-lg-3 " rel="rel1">
+                    <img class="img-fluid  " src="img/social.jpg" alt="..." />
+
+                    <h2 class=" text-center text-black-50">SOCIAL MEDIA</h2>
+                </a>
+                <a href="img/1.png" class="big col-lg-3 " rel="rel1">
+                    <img class="img-fluid  " src="img/motion graphics.png" alt="..." />
+
+                    <h2 class=" text-center text-black-50">MOTION GRAPHICS</h2>
+                </a>
+                <a href="img/1.png" class="big col-lg-3 " rel="rel1">
+                    <img class="img-fluid  " src="img/character.jpg" alt="..." />
+
+                    <h2 class=" text-center text-black-50">CHARACTER DESIGNS</h2>
+                </a>
+                <a href="img/1.png" class="big col-lg-3 " rel="rel1">
+                    <img class="img-fluid  " src="img/3DDesign.jpg" alt="..." />
+
+                    <h2 class=" text-center text-black-50">IIID DESIGNS</h2>
+                </a>
+                <a href="img/1.png" class="big col-lg-3 " rel="rel1">
+                    <img class="img-fluid  " src="img/pain.jpg" alt="..." />
+
+                    <h2 class=" text-center text-black-50">VISUALS DESIGNS</h2>
+                </a>
+
+                <a href="javascript:void(0)" class="btn downloadBtn">SEE MORE</a>
+
+            </div>
+
+
+        </div>
+    </section>
+
+    <!-- <section class="project-section bg-light section" id="projects">
         <div class="container  px-lg-5">
            
             <h1 class="text-center m-5">PASSIONATE ON WHAT I WORK</h1>
@@ -292,38 +290,37 @@
             </div>
     </section> -->
 
-        <!-- Contact-->
-        <section class="contact-section bg-black ">
+    <!-- Contact-->
+    <section class="contact-section bg-black ">
 
-            <div class="container px-4 px-lg-5">
+        <div class="container px-4 px-lg-5">
 
-                <div class="row ">
+            <div class="row ">
 
 
-                    <div class="col-7 pt-5">
-                        <img src="img/Ellipse 4.png" class="icon" alt="" srcset="">
-                        <img src="img/Ellipse 3.png" class="icon" alt="" srcset="">
-                        <img src="img/Ellipse 5.png" class="icon" alt="" srcset="">
-                        <img src="img/Ellipse 14.png" class="icon" alt="" srcset="">
-                        <img src="img/Ellipse 6.png" class="icon" alt="" srcset="">
-                        <img src="img/Ellipse 10.png" class="icon" alt="" srcset="">
+                <div class="col-7 pt-5">
+                    <img src="img/Ellipse 4.png" class="icon" alt="" srcset="">
+                    <img src="img/Ellipse 3.png" class="icon" alt="" srcset="">
+                    <img src="img/Ellipse 5.png" class="icon" alt="" srcset="">
+                    <img src="img/Ellipse 14.png" class="icon" alt="" srcset="">
+                    <img src="img/Ellipse 6.png" class="icon" alt="" srcset="">
+                    <img src="img/Ellipse 10.png" class="icon" alt="" srcset="">
 
-                        <img src="img/Ellipse 11.png" alt="" class="icon" srcset="">
-                        <img src="img/Ellipse 12.png" alt="" class="icon" srcset="">
-                        <img src="img/Ellipse 9.png" alt="" class="icon" srcset="">
-                        <img src="img/Ellipse 8.png" alt="" class="icon" srcset="">
-                    </div>
-                    <div class="col-4 px-5">
-                        <img src="img/me.png" class="me" alt="" srcset="">
-                    </div>
-
+                    <img src="img/Ellipse 11.png" alt="" class="icon" srcset="">
+                    <img src="img/Ellipse 12.png" alt="" class="icon" srcset="">
+                    <img src="img/Ellipse 9.png" alt="" class="icon" srcset="">
+                    <img src="img/Ellipse 8.png" alt="" class="icon" srcset="">
+                </div>
+                <div class="col-4 px-5">
+                    <img src="img/me.png" class="me" alt="" srcset="">
                 </div>
 
-
             </div>
-        </section>
 
-    </div>
+
+        </div>
+    </section>
+
 
     <a href="mailto:freddielin.work@gmail.com" class="float1">
         <i class="fa fa-envelope my-float"></i>
@@ -343,7 +340,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="module" src="js/index.js"></script>
+
     <script src="jquery.textillate.js"></script>
     <script src="jquery.fittext.js"></script>
     <script src="jquery.lettering.js"></script>
