--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                     <h2 class=" text-center text-black-50">VISUALS DESIGNS</h2>
                 </a>
 
-                <a href="javascript:void(0)" class="btn downloadBtn">SEE MORE</a>
+                <a href="https://drive.google.com/file/d/1_g0odTNo4G9fKm9n998_3u6D3W-e3Cg5/view?usp=sharing" class="btn downloadBtn">SEE MORE</a>
 
             </div>
 
