Added Google Analytics

--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YSTF4M00QN"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-YSTF4M00QN');
+    </script>
     <title>Freddie Lin</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
@@ -44,7 +53,7 @@
             <div class="d-flex justify-content-center ">
                 <div class="text-center">
                     <h1 class="  title text-uppercase">CREATIVE</h1>
-                    <h1 class= " title text-uppercase">DESIGNER</h1>
+                    <h1 class=" title text-uppercase">DESIGNER</h1>
                     <h2 class=" mx-auto mt-2 mb-5 subtitle">FREDDIE LIN</h2>
                     <a class="btn mouse mx-auto "><img src="mouse.svg" alt=""></a>
                 </div>
@@ -224,7 +233,8 @@
                     <h2 class=" text-center text-black-50">VISUALS DESIGNS</h2>
                 </a>
 
-                <a href="https://drive.google.com/file/d/1_g0odTNo4G9fKm9n998_3u6D3W-e3Cg5/view?usp=sharing" class="btn downloadBtn">SEE MORE</a>
+                <a href="https://drive.google.com/file/d/1_g0odTNo4G9fKm9n998_3u6D3W-e3Cg5/view?usp=sharing"
+                    class="btn downloadBtn">SEE MORE</a>
 
             </div>
 
