--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <img src="img/wap.jpg" alt="" width="400px" class=" position-relative img-fluid">
     </div>
 
-
+<div class="fullscreen">
     <section class="main section ">
 
 
@@ -330,6 +330,8 @@
 
         </div>
     </section>
+
+<div>
 
 
     <a href="mailto:freddielin.work@gmail.com" class="float1">
