--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <img src="img/wap.jpg" alt="" width="400px" class=" position-relative img-fluid">
     </div>
 
-<div class="fullscreen">
+<div id="fullpage">
     <section class="main section ">
 
 
@@ -331,7 +331,7 @@
         </div>
     </section>
 
-<div>
+</div>
 
 
     <a href="mailto:freddielin.work@gmail.com" class="float1">
